; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_utf_validate.c_svn_utf__last_valid.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_utf_validate.c_svn_utf__last_valid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FSM_START = common dso_local global i32 0, align 4
@octet_category = common dso_local global i32* null, align 8
@machine = common dso_local global i32** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @svn_utf__last_valid(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8, align 1
  %9 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %10 = load i8*, i8** %3, align 8
  %11 = load i32, i32* %4, align 4
  %12 = call i8* @first_non_fsm_start_char(i8* %10, i32 %11)
  store i8* %12, i8** %5, align 8
  %13 = load i8*, i8** %3, align 8
  %14 = load i32, i32* %4, align 4
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds i8, i8* %13, i64 %15
  store i8* %16, i8** %6, align 8
  %17 = load i32, i32* @FSM_START, align 4
  store i32 %17, i32* %7, align 4
  %18 = load i8*, i8** %5, align 8
  store i8* %18, i8** %3, align 8
  br label %19

19:                                               ; preds = %46, %2
  %20 = load i8*, i8** %3, align 8
  %21 = load i8*, i8** %6, align 8
  %22 = icmp ult i8* %20, %21
  br i1 %22, label %23, label %47

23:                                               ; preds = %19
  %24 = load i8*, i8** %3, align 8
  %25 = getelementptr inbounds i8, i8* %24, i32 1
  store i8* %25, i8** %3, align 8
  %26 = load i8, i8* %24, align 1
  store i8 %26, i8* %8, align 1
  %27 = load i32*, i32** @octet_category, align 8
  %28 = load i8, i8* %8, align 1
  %29 = zext i8 %28 to i64
  %30 = getelementptr inbounds i32, i32* %27, i64 %29
  %31 = load i32, i32* %30, align 4
  store i32 %31, i32* %9, align 4
  %32 = load i32**, i32*** @machine, align 8
  %33 = load i32, i32* %7, align 4
  %34 = sext i32 %33 to i64
  %35 = getelementptr inbounds i32*, i32** %32, i64 %34
  %36 = load i32*, i32** %35, align 8
  %37 = load i32, i32* %9, align 4
  %38 = sext i32 %37 to i64
  %39 = getelementptr inbounds i32, i32* %36, i64 %38
  %40 = load i32, i32* %39, align 4
  store i32 %40, i32* %7, align 4
  %41 = load i32, i32* %7, align 4
  %42 = load i32, i32* @FSM_START, align 4
  %43 = icmp eq i32 %41, %42
  br i1 %43, label %44, label %46

44:                                               ; preds = %23
  %45 = load i8*, i8** %3, align 8
  store i8* %45, i8** %5, align 8
  br label %46

46:                                               ; preds = %44, %23
  br label %19

47:                                               ; preds = %19
  %48 = load i8*, i8** %5, align 8
  ret i8* %48
}

declare dso_local i8* @first_non_fsm_start_char(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
